e2e/test/lb-with-vpc-backends/create-pods-services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vpc-backends
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpc-backends
  template:
    metadata:
      labels:
        app: vpc-backends
    spec:
      containers:
      - image: appscode/test-server:2.3
        name: test
        ports:
        - name: http-1
          containerPort: 80
          protocol: TCP
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-backend-ipv4-range: "10.100.0.0/30"
  labels:
    app: vpc-backends
spec:
  type: LoadBalancer
  selector:
    app: vpc-backends
  ports:
    - name: http-1
      protocol: TCP
      port: 80
      targetPort: 80
  sessionAffinity: None
